tests/lifetime/path_borrower/path_borrower_obligation_errors.sim
# Path-borrower pass — unfulfilled field-ref obligation.
#
# Moving a struct whose field holds a reference with an unsatisfied
# obligation is illegal. This fixture covers that single error cell.
#
#   fn                             path shape     violation
#   move_with_unfulfilled_ref_obs  field ref      move before Init obligation met
#
# This case is separated from path_borrower_violations.sim because the
# init-state pass runs before the lifetime pass; an
# INIT-MoveWithUnfulfilledContainedRef error in any function suppresses
# LT-LoanConflict diagnostics for other functions in the same file.

struct RefBox: Move { p: &mut i64 }

extern fn take_box(b: RefBox);

# ---------- Move struct before field-ref obligation is met ----------

# `b.p = &mut x` opens a loan that imposes an Init obligation: the
# pointee must be Init when `b.p` expires. Moving `b.p.*` out without
# writing back leaves `x` Uninit. Moving `b` via `take_box` while the
# obligation remains unsatisfied fires INIT-MoveWithUnfulfilledContainedRef.
fn move_with_unfulfilled_ref_obs(x: i64) {
  b: RefBox;
  y: i64;
  entry:
    b.p = &mut x;
    y = move b.p.*;
    call take_box(move b);
    return
}
